# trackballs

./: .clang-format  .gitignore  ABOUT-NLS  ABOUT-NLS.md  AUTHORS  AUTHORS.md  CMakeLists.txt  COPYING  ChangeLog  FAQ  FAQ.md  INSTALL  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.html  README.md  TODO  TODO.md  aclocal.m4  autoformat.sh  config.h.in  configure  configure.ac  gettext.h
cmake/: FindGC.cmake  FindGuile.cmake  FindSDL2.cmake  FindSDL2_and_friends.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
docs/: api.html  customizing.html  default.css  examples.html  index.html  mapeditor.html  scriptingLanguage.html
intl/: Makefile.am  Makefile.in  dummy.txt
m4/: ChangeLog  Makefile.in
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  de.gmo  de.po  fr.gmo  fr.po  hu.gmo  hu.po  it.gmo  it.po  nl.po  sk.gmo  sk.po  sv.gmo  sv.po  trackballs.pot  updatePo.sh
share/: Makefile.am  Makefile.in  highScores  trackballs.6
share/fonts/: Makefile.am  Makefile.in
share/freedesktop/: trackballs.appdata.xml  trackballs.desktop
share/icons/: Makefile.am  Makefile.in  installIcons  trackballs.desktop  trackballs.desktop.in  updateIcons.sh
share/images/: Makefile.am  Makefile.in  font.rgb
share/levels/: Makefile.am  Makefile.in  Shop1.map  Shop1.scm  Shop2.map  Shop2.scm  bonus.map  bonus.scm  bonusb.map  bonusb.scm  boot.scm  bx.set  bx1.map  bx1.scm  bx2.map  bx2.scm  bx3.map  bx3.scm  castle1.map  castle1.scm  castle2.map  castle2.scm  castle3.map  castle3.scm  castle4.map  castle4.scm  castles.set  castles.txt  child.set  child1.map  child1.scm  child2.map  child2.scm  child3.map  child3.scm  child4.map  child4.scm  child5.map  child5.scm  child6.map  (+139 more)
share/music/: Makefile.am  Makefile.in  README  fml.html
share/sfx/: Makefile.am  Makefile.in
share/shaders/: basic.frag  basic.vert  basic_day.frag  basic_night.frag  basic_shadow.frag  line.frag  line.vert  object.frag  object.vert  object_day.frag  object_night.frag  object_shadow.frag  reflection.frag  reflection.vert  ui.frag  ui.vert  water.frag  water.vert  water_day.frag  water_night.frag
src/: Makefile.am  Makefile.in  animated.cc  animated.h  animatedCollection.cc  animatedCollection.h  animator.cc  animator.h  baby.cc  baby.h  ball.cc  ball.h  bird.cc  bird.h  black.cc  black.h  box.cc  box.h  cactus.cc  cactus.h  calibrateJoystickMode.cc  calibrateJoystickMode.h  colorModifier.cc  colorModifier.h  config.h  cyclicPlatform.cc  cyclicPlatform.h  debris.cc  debris.h  diamond.cc  diamond.h  editMode.cc  editMode.h  editMode_codes.h  editWindows.cc  editWindows.h  enterHighScoreMode.cc  enterHighScoreMode.h  flag.cc  flag.h  (+88 more)
